# topic-service/swagger.yaml
@@ -70,8 +70,7 @@ paths:
         '201':
           description: OK
           schema:
-            type: string
-            example: New ID
+            $ref: '#/definitions/Topic'
         default:
           description: unexpected error
           schema:
@@ -116,8 +115,7 @@ paths:
         '200':
           description: OK
           schema:
-            type: string
-            example: OK
+            $ref: '#/definitions/Topic'
         default:
           description: unexpected error
           schema:
@@ -134,11 +132,10 @@ paths:
           description: The id of the topic to delete
           type: string
       responses:
-        '204':
+        '200':
           description: OK
           schema:
-            type: string
-            example: OK
+            $ref: '#/definitions/Topic'
         default:
           description: unexpected error
           schema:
